--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,8 @@
     <string name="notification">Notification</string>
     <string name="alarm">Alarm</string>
     <string name="ser_loc">Search for a location</string>
+    <string name="delete">Delete</string>
+    <string name="close">Close</string>
+    <string name="confirm_delete">Are you sure you want to delete this place?</string>
 
 </resources>
